force-app/main/default/objects/Campaign_History__c/Campaign_History__c.object-meta.xml
<CustomObject>
    <label>Campaign History</label>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaigns History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>