force-app/main/default/objects/Campaign_History__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Emailing</fullName>
            </value>
            <value>
                <fullName>Mailing</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Wechat</fullName>
            </value>
            <value>
                <fullName>Line</fullName>
            </value>
            <value>
                <fullName>Kakao</fullName>
            </value>
            <value>
                <fullName>Push</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>