force-app/main/default/objects/Campaign_History__c/fields/Dream_ID__c.field-meta.xml
<CustomField>
    <fullName>Dream_ID__c</fullName>
    <externalId>true</externalId>
    <label>Dream ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>