force-app/main/default/objects/Campaign_History__c/fields/MK_Miror_Link__c.field-meta.xml
<CustomField>
    <fullName>MK_Miror_Link__c</fullName>
    <label>Miror Link</label>
    <type>Url</type>
</CustomField>