force-app/main/default/objects/Campaign_History__c/fields/MK_Participant_ID__c.field-meta.xml
<CustomField>
    <fullName>MK_Participant_ID__c</fullName>
    <externalId>true</externalId>
    <label>Participant ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>