force-app/main/default/objects/Campaign_History__c/fields/MK_Product_recommanded_2__c.field-meta.xml
<CustomField>
    <fullName>MK_Product_recommanded_2__c</fullName>
    <label>Product recommanded 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>