force-app/main/default/objects/Campaign_History__c/fields/MK_Status__c.field-meta.xml
<CustomField>
    <fullName>MK_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>sent</fullName>
            </value>
            <value>
                <fullName>open</fullName>
            </value>
            <value>
                <fullName>clicked</fullName>
            </value>
            <value>
                <fullName>softbounce</fullName>
            </value>
            <value>
                <fullName>hardbounce</fullName>
            </value>
            <value>
                <fullName>not delivered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>